force-app/main/default/objects/Shipment__c/fields/Invoiced_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Amount__c</fullName>
    <label>Invoiced Amount</label>
    <summarizedField>Shipment_Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Shipment_Payment__c.Error_Code__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Shipment_Payment__c.Shipment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>