force-app/main/default/objects/Shipment__c/fields/InvoicePhoto__c.field-meta.xml
<CustomField>
    <fullName>InvoicePhoto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InvoicePhoto</label>
    <type>Checkbox</type>
</CustomField>