force-app/main/default/objects/Shipment__c/fields/Invoicing_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Date__c</fullName>
    <label>Invoicing Date</label>
    <type>Date</type>
</CustomField>