force-app/main/default/objects/Shipment__c/fields/Inward_Date__c.field-meta.xml
<CustomField>
    <fullName>Inward_Date__c</fullName>
    <label>Inward Date</label>
    <type>Date</type>
</CustomField>