force-app/main/default/objects/Shipment__c/fields/Is_Count_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Is_Count_Mismatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Count Mismatch</label>
    <type>Checkbox</type>
</CustomField>