force-app/main/default/objects/Shipment__c/fields/Is_Misrouted__c.field-meta.xml
<CustomField>
    <fullName>Is_Misrouted__c</fullName>
    <formula>IF( count_misrouted_bags__c &gt; 0 , true, false)</formula>
    <label>Is Misrouted</label>
    <type>Checkbox</type>
</CustomField>