force-app/main/default/objects/Shipment__c/fields/Is_Offline__c.field-meta.xml
<CustomField>
    <fullName>Is_Offline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Offline</label>
    <type>Checkbox</type>
</CustomField>