force-app/main/default/objects/Shipment__c/fields/Is_Payment_Visible__c.field-meta.xml
<CustomField>
    <fullName>Is_Payment_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Payment Visible</label>
    <type>Checkbox</type>
</CustomField>