force-app/main/default/objects/Shipment__c/fields/Is_Pickup_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_Pickup_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pickup Created</label>
    <type>Checkbox</type>
</CustomField>