force-app/main/default/objects/Shipment__c/fields/Is_Signature_Done__c.field-meta.xml
<CustomField>
    <fullName>Is_Signature_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Signature Done</label>
    <type>Checkbox</type>
</CustomField>