force-app/main/default/objects/Shipment__c/fields/isBagsAdded__c.field-meta.xml
<CustomField>
    <fullName>isBagsAdded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBagsAdded</label>
    <type>Checkbox</type>
</CustomField>