force-app/main/default/objects/Shipment__c/fields/IsExhibition__c.field-meta.xml
<CustomField>
    <fullName>IsExhibition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exhibition?</label>
    <type>Checkbox</type>
</CustomField>