force-app/main/default/objects/Shipment__c/fields/Jewellery_Category__c.field-meta.xml
<CustomField>
    <fullName>Jewellery_Category__c</fullName>
    <label>Jewellery Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Diamond</fullName>
            </value>
            <value>
                <fullName>Studded</fullName>
            </value>
            <value>
                <fullName>not Studded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>