force-app/main/default/objects/Shipment__c/fields/Job_Creation_Time_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Creation_Time_Date__c</fullName>
    <label>Job Creation Time &amp; Date</label>
    <type>DateTime</type>
</CustomField>