force-app/main/default/objects/Shipment__c/fields/Job_date__c.field-meta.xml
<CustomField>
    <fullName>Job_date__c</fullName>
    <description>This is the date of the job for Clearance</description>
    <label>Job date</label>
    <type>Date</type>
</CustomField>