force-app/main/default/objects/Shipment__c/fields/Job_No__c.field-meta.xml
<CustomField>
    <fullName>Job_No__c</fullName>
    <description>This is for Clearance</description>
    <label>Job No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>