force-app/main/default/objects/Shipment__c/fields/JSA__c.field-meta.xml
<CustomField>
    <fullName>JSA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JSA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ShipmentsJSA</relationshipName>
    <type>Lookup</type>
</CustomField>