force-app/main/default/objects/Shipment__c/fields/Lead_id__c.field-meta.xml
<CustomField>
    <fullName>Lead_id__c</fullName>
    <label>Customer Lead ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>