force-app/main/default/objects/Shipment__c/fields/Linehaul_Connnection_Time__c.field-meta.xml
<CustomField>
    <fullName>Linehaul_Connnection_Time__c</fullName>
    <label>Linehaul Connnection Time</label>
    <type>DateTime</type>
</CustomField>