force-app/main/default/objects/Shipment__c/fields/Linehaul_Creation_Time__c.field-meta.xml
<CustomField>
    <fullName>Linehaul_Creation_Time__c</fullName>
    <label>Linehaul Creation Time</label>
    <type>DateTime</type>
</CustomField>