force-app/main/default/objects/Shipment__c/fields/Linehaul_not_Processed__c.field-meta.xml
<CustomField>
    <fullName>Linehaul_not_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Linehaul not Processed</label>
    <type>Checkbox</type>
</CustomField>