force-app/main/default/objects/Shipment__c/fields/Linehaul_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Linehaul_Tracking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linehaul Tracking</label>
    <referenceTo>Linehaul_Tracking__c</referenceTo>
    <relationshipLabel>Linehaul Tracking</relationshipLabel>
    <relationshipName>Shipments_del</relationshipName>
    <type>Lookup</type>
</CustomField>