force-app/main/default/objects/Shipment__c/fields/Manifest_Photo__c.field-meta.xml
<CustomField>
    <fullName>Manifest_Photo__c</fullName>
    <label>Manifest Photo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>