force-app/main/default/objects/Shipment__c/fields/Master_Manifest_Number__c.field-meta.xml
<CustomField>
    <fullName>Master_Manifest_Number__c</fullName>
    <label>Master Manifest Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>