force-app/main/default/objects/Shipment__c/fields/MAWB_Date__c.field-meta.xml
<CustomField>
    <fullName>MAWB_Date__c</fullName>
    <description>International &amp; Clearance</description>
    <label>MAWB Date</label>
    <type>Date</type>
</CustomField>