force-app/main/default/objects/Shipment__c/fields/MAWB_No__c.field-meta.xml
<CustomField>
    <fullName>MAWB_No__c</fullName>
    <description>International &amp; Clearance</description>
    <label>MAWB No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>