force-app/main/default/objects/Shipment__c/fields/Net_weight_in_Gram__c.field-meta.xml
<CustomField>
    <fullName>Net_weight_in_Gram__c</fullName>
    <formula>CASE( TEXT(Net_Weight_UOM_TMS__c), &apos;KG&apos;, Net_Weight__c * 1000,
				&apos;Carat&apos;, Net_Weight__c * 0.20, Net_Weight__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net weight in Gram</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>