force-app/main/default/objects/Shipment__c/fields/Net_Weight_UOM__c.field-meta.xml
<CustomField>
    <fullName>Net_Weight_UOM__c</fullName>
    <label>Net Weight UOM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>