force-app/main/default/objects/Shipment__c/fields/Net_Weight_UOM_TMS__c.field-meta.xml
<CustomField>
    <fullName>Net_Weight_UOM_TMS__c</fullName>
    <label>Net Weight UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gram</fullName>
                <default>true</default>
                <label>Gram</label>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>Carat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>