force-app/main/default/objects/Shipment__c/fields/Net_wt_variance__c.field-meta.xml
<CustomField>
    <fullName>Net_wt_variance__c</fullName>
    <formula>( ( ( Shipment_Value__c  / 5500 )  -  ( Net_weight_in_Gram__c ) )  /  Net_weight_in_Gram__c ) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net wt variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>