force-app/main/default/objects/Shipment__c/fields/Next_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Billing_Date__c</fullName>
    <label>Next Billing Date</label>
    <type>Date</type>
</CustomField>