force-app/main/default/objects/Shipment__c/fields/No_Of_Attempts__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Attempts__c</fullName>
    <label>No Of Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>