force-app/main/default/objects/Shipment__c/fields/No_of_Pkgs__c.field-meta.xml
<CustomField>
    <fullName>No_of_Pkgs__c</fullName>
    <description>All</description>
    <label>No of Pkgs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>