force-app/main/default/objects/Shipment__c/fields/Number_of_Secure_Bags__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Secure_Bags__c</fullName>
    <label>Number of Secure Bags</label>
    <summaryForeignKey>Secure_Bag__c.Shipment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>