force-app/main/default/objects/Shipment__c/fields/Number_of_Secure_Bags_scanned__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Secure_Bags_scanned__c</fullName>
    <label>Number of Secure Bags scanned</label>
    <summaryFilterItems>
        <field>Secure_Bag__c.Scanning_Status__c</field>
        <operation>equals</operation>
        <value>Scanned</value>
    </summaryFilterItems>
    <summaryForeignKey>Secure_Bag__c.Shipment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>