force-app/main/default/objects/Shipment__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>This is field for all businesses</description>
    <label>Origin</label>
    <length>20</length>
    <type>Text</type>
</CustomField>