force-app/main/default/objects/Shipment__c/fields/Origin_Address__c.field-meta.xml
<CustomField>
    <fullName>Origin_Address__c</fullName>
    <label>Origin Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>