force-app/main/default/objects/Shipment__c/fields/Origin_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Origin_Address_City__c</fullName>
    <formula>TEXT(Origin_Address_Name__r.Active_Pincode__r.City__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin Address City</label>
    <type>Text</type>
</CustomField>