force-app/main/default/objects/Shipment__c/fields/Origin_Address_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Origin_Address_Contact_Name__c</fullName>
    <label>Origin Address Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>