force-app/main/default/objects/Shipment__c/fields/Origin_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Origin_Address_Country__c</fullName>
    <formula>Origin_Address_Name__r.COUNTRY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin Address Country</label>
    <type>Text</type>
</CustomField>