force-app/main/default/objects/Shipment__c/fields/Origin_Address_Email__c.field-meta.xml
<CustomField>
    <fullName>Origin_Address_Email__c</fullName>
    <formula>Origin_Address_Name__r.EMAIL_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin Address Email</label>
    <type>Text</type>
</CustomField>