force-app/main/default/objects/Shipment__c/fields/Origin_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Origin_Address_Line_1__c</fullName>
    <formula>Origin_Address_Name__r.ADDRESS1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin Address Line_1</label>
    <type>Text</type>
</CustomField>