force-app/main/default/objects/Shipment__c/fields/Origin_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Origin_Address_Line_2__c</fullName>
    <formula>Origin_Address_Name__r.ADDRESS2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin Address Line 2</label>
    <type>Text</type>
</CustomField>