force-app/main/default/objects/Shipment__c/fields/Origin_Address_Name__c.field-meta.xml
<CustomField>
    <fullName>Origin_Address_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Address Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Shipper_Name_TMS__c</field>
            <operation>equals</operation>
            <valueField>AddressBook__c.Customer__c</valueField>
        </filterItems>
        <filterItems>
            <field>AddressBook__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AddressBook__c</referenceTo>
    <relationshipLabel>Shipments (Origin Address Name)</relationshipLabel>
    <relationshipName>Shipments1</relationshipName>
    <type>Lookup</type>
</CustomField>