force-app/main/default/objects/Shipment__c/fields/Origin_Address_Name_App__c.field-meta.xml
<CustomField>
    <fullName>Origin_Address_Name_App__c</fullName>
    <label>Origin Address Name</label>
    <type>TextArea</type>
</CustomField>