force-app/main/default/objects/Shipment__c/fields/Origin_Address_Phone__c.field-meta.xml
<CustomField>
    <fullName>Origin_Address_Phone__c</fullName>
    <formula>Origin_Address_Name__r.MOBILE1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin Address Phone</label>
    <type>Text</type>
</CustomField>