force-app/main/default/objects/Shipment__c/fields/Origin_Address_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Origin_Address_Pincode__c</fullName>
    <formula>Origin_Address_Name__r.PINCODE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin Address Pincode</label>
    <type>Text</type>
</CustomField>