force-app/main/default/objects/Shipment__c/fields/Origin_Address_State__c.field-meta.xml
<CustomField>
    <fullName>Origin_Address_State__c</fullName>
    <formula>Origin_Address_Name__r.STATE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin Address State</label>
    <type>Text</type>
</CustomField>