force-app/main/default/objects/Shipment__c/fields/Origin_Branch__c.field-meta.xml
<CustomField>
    <fullName>Origin_Branch__c</fullName>
    <description>All</description>
    <label>Origin Branch</label>
    <length>100</length>
    <type>Text</type>
</CustomField>