force-app/main/default/objects/Shipment__c/fields/Origin_Country__c.field-meta.xml
<CustomField>
    <fullName>Origin_Country__c</fullName>
    <description>International &amp; Clearance</description>
    <label>Origin Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>