force-app/main/default/objects/Shipment__c/fields/Origin_Destination_Pairing__c.field-meta.xml
<CustomField>
    <fullName>Origin_Destination_Pairing__c</fullName>
    <label>Origin Destination Pairing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Within City</fullName>
            </value>
            <value>
                <fullName>City to City</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>