force-app/main/default/objects/Shipment__c/fields/Origin_Hub__c.field-meta.xml
<CustomField>
    <fullName>Origin_Hub__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Hub</label>
    <referenceTo>Hub__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>HubShipments</relationshipName>
    <type>Lookup</type>
</CustomField>