force-app/main/default/objects/Shipment__c/fields/Origin_Hub_Manager__c.field-meta.xml
<CustomField>
    <fullName>Origin_Hub_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Hub Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Shipments2</relationshipName>
    <type>Lookup</type>
</CustomField>