force-app/main/default/objects/Shipment__c/fields/Origin_Hub_Scan_Time__c.field-meta.xml
<CustomField>
    <fullName>Origin_Hub_Scan_Time__c</fullName>
    <label>Origin Hub Scan Time</label>
    <type>DateTime</type>
</CustomField>