force-app/main/default/objects/Shipment__c/fields/Origin_Pin_Code__c.field-meta.xml
<CustomField>
    <fullName>Origin_Pin_Code__c</fullName>
    <label>Origin Pin Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>