force-app/main/default/objects/Shipment__c/fields/Origin_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Origin_Pincode__c</fullName>
    <label>Origin Pincode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>