force-app/main/default/objects/Shipment__c/fields/Origin_Pincode_Type__c.field-meta.xml
<CustomField>
    <fullName>Origin_Pincode_Type__c</fullName>
    <label>Origin Pincode Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>