force-app/main/default/objects/Shipment__c/fields/Out_For_Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Out_For_Delivery_Time__c</fullName>
    <label>Out For Delivery Time</label>
    <type>DateTime</type>
</CustomField>