force-app/main/default/objects/Shipment__c/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shipments (Payer)</relationshipLabel>
    <relationshipName>Shipments1</relationshipName>
    <type>Lookup</type>
</CustomField>