force-app/main/default/objects/Shipment__c/fields/Payer_s_Consent_On_Payment__c.field-meta.xml
<CustomField>
    <fullName>Payer_s_Consent_On_Payment__c</fullName>
    <label>Payer&apos;s Consent On Payment ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>