force-app/main/default/objects/Shipment__c/fields/PDF_Generation__c.field-meta.xml
<CustomField>
    <fullName>PDF_Generation__c</fullName>
    <label>PDF Generation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needs to Generate</fullName>
                <default>true</default>
                <label>Needs to Generate</label>
            </value>
            <value>
                <fullName>Generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>