force-app/main/default/objects/Shipment__c/fields/PDF_Generation_Status__c.field-meta.xml
<CustomField>
    <fullName>PDF_Generation_Status__c</fullName>
    <formula>IF( ISPICKVAL(PDF_Generation__c,&quot;Generated&quot;),
   &quot;green&quot;,&quot;yellow&quot;
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PDF Generation Status</label>
    <type>Text</type>
</CustomField>