force-app/main/default/objects/Shipment__c/fields/Pdf_Url__c.field-meta.xml
<CustomField>
    <fullName>Pdf_Url__c</fullName>
    <formula>&quot;https://bvc-universe.secure.force.com?id=&quot;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pdf Url</label>
    <type>Text</type>
</CustomField>