force-app/main/default/objects/Shipment__c/fields/Physical_Pickup_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Physical_Pickup_Start_Time__c</fullName>
    <formula>Pickup__r.Physical_Pickup_Start_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physical Pickup Start Time</label>
    <type>DateTime</type>
</CustomField>