force-app/main/default/objects/Shipment__c/fields/Pickup__c.field-meta.xml
<CustomField>
    <fullName>Pickup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pickup</label>
    <referenceTo>Pickup__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>