force-app/main/default/objects/Shipment__c/fields/Pickup_Request_Creation_Time__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Request_Creation_Time__c</fullName>
    <formula>Pickup__r.Pickup_Request_Creation_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pickup Request Creation Time</label>
    <type>DateTime</type>
</CustomField>