force-app/main/default/objects/Shipment__c/fields/Pickup_Time_Date__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Time_Date__c</fullName>
    <label>Pickup Time &amp; Date</label>
    <type>DateTime</type>
</CustomField>