force-app/main/default/objects/Shipment__c/fields/PickupCompletedBySafe__c.field-meta.xml
<CustomField>
    <fullName>PickupCompletedBySafe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PickupCompletedBySafe</label>
    <type>Checkbox</type>
</CustomField>