force-app/main/default/objects/Shipment__c/fields/platform_User__c.field-meta.xml
<CustomField>
    <fullName>platform_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>platform User?</label>
    <type>Checkbox</type>
</CustomField>