force-app/main/default/objects/Shipment__c/fields/POD_Link__c.field-meta.xml
<CustomField>
    <fullName>POD_Link__c</fullName>
    <label>POD Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>