force-app/main/default/objects/Shipment__c/fields/POD_Link_Url__c.field-meta.xml
<CustomField>
    <fullName>POD_Link_Url__c</fullName>
    <label>POD Link Url</label>
    <type>Url</type>
</CustomField>