force-app/main/default/objects/Shipment__c/fields/POD_Trigger_Date_del__c.field-meta.xml
<CustomField>
    <fullName>POD_Trigger_Date_del__c</fullName>
    <description>Used for Triggering POD Flow</description>
    <label>POD Trigger Date</label>
    <type>DateTime</type>
</CustomField>