force-app/main/default/objects/Shipment__c/fields/Proceed_for_ACR_Billing__c.field-meta.xml
<CustomField>
    <fullName>Proceed_for_ACR_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proceed for ACR Billing</label>
    <type>Checkbox</type>
</CustomField>