force-app/main/default/objects/Shipment__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Studded Jewellery</fullName>
            </value>
            <value>
                <fullName>Plain Jewellery</fullName>
            </value>
            <value>
                <fullName>Preset Solitaire</fullName>
            </value>
            <value>
                <fullName>UnStud-Jwry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>