force-app/main/default/objects/Shipment__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <label>BVC Product Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>