force-app/main/default/objects/Shipment__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <label>Product Description</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Customer_Product_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Machinery</fullName>
            </value>
            <value>
                <fullName>Packing Material</fullName>
            </value>
            <value>
                <fullName>Coloured &amp; Gem Stones</fullName>
            </value>
            <value>
                <fullName>Cut &amp; Polished Diamonds</fullName>
            </value>
            <value>
                <fullName>Diamond Jewellery</fullName>
                <label>DIAMOND JEWELLERY</label>
            </value>
            <value>
                <fullName>Dore Bar</fullName>
            </value>
            <value>
                <fullName>Gold Bar</fullName>
                <label>GOLD BAR</label>
            </value>
            <value>
                <fullName>Gold Coin</fullName>
            </value>
            <value>
                <fullName>Gold Jewellery</fullName>
                <label>GOLD JEWELLERY</label>
            </value>
            <value>
                <fullName>Platinum Jewellery</fullName>
            </value>
            <value>
                <fullName>Diamond Powder</fullName>
            </value>
            <value>
                <fullName>Imitation Jewellery</fullName>
            </value>
            <value>
                <fullName>Silver Bar</fullName>
            </value>
            <value>
                <fullName>Silver Coin</fullName>
            </value>
            <value>
                <fullName>Silver Jewellery</fullName>
                <label>SILVER JEWELLERY</label>
            </value>
            <value>
                <fullName>Rough Diamond</fullName>
                <label>ROUGH DIAMOND</label>
            </value>
            <value>
                <fullName>Silver Article</fullName>
                <label>SILVER ARTICLE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>