force-app/main/default/objects/Shipment__c/fields/Product_HSN_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_HSN_Code__c</fullName>
    <formula>Product_Name__r.HSN_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product HSN Code</label>
    <type>Text</type>
</CustomField>